html and css framework

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,17 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
         <script src="https://cdn.socket.io/4.1.2/socket.io.min.js" integrity="sha384-toS6mmwu70G0fw54EGlWWeA4z3dyJ+dlXBtSURSKN4vyRFOcxd3Bzjj/AoOwY+Rg" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <script src="src/canvas.js"></script>
+        <div id="chatwindow" class="chatwindow">
+            <div id="chatbox" class="chatbox">
+                <div id="inputbox" class="inputbox">
+                </div>
+            </div>
+        </div>
+        <script src="src/user.js"></script>
     </body>
 </html>
