--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
                 <form id="chatform"><input type="text" id="chatbar" name="chatbar" placeholder="Click to begin typing"></form>
             </div>
             <div id="userlist" class="userlist">
+                <span>Users:</span>
                 <div id="numUsers">
                     
                 </div>
