--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
                 <h1>What's your name?</h1>
             </div>
         </div>
+        <div id="cogModal" class="optionsModal"></div>
         <div id="chatwindow" class="chatwindow">
+            <img src="img/cog.png" id="cog"/>
             <div id="chatbox" class="chatbox">
             </div>
             <div id="inputbox" class="inputbox">
