HTML reorganizing, fixed -5% issue on userlist

--- a/public/index.html
+++ b/public/index.html
@@ -20,18 +20,18 @@
         </div>
         <div id="cogModal" class="optionsModal"></div>
         <div id="chatwindow" class="chatwindow">
-            <img src="img/cog.png" id="cog"/>
-            <div id="chatbox" class="chatbox">
-            </div>
-            <div id="inputbox" class="inputbox">
-                <form id="chatform"><input type="text" id="chatbar" name="chatbar" placeholder="Click to begin typing"></form>
-            </div>
             <div id="userlist" class="userlist">
                 <span>Users:</span>
                 <div id="numUsers">
                     
                 </div>
             </div>
+            <div id="chatbox" class="chatbox">\
+                <div id="inputbox" class="inputbox">
+                    <form id="chatform"><input type="text" id="chatbar" name="chatbar" placeholder="Click to begin typing"></form>
+                </div>
+            </div>
+            <img src="img/cog.png" id="cog"/>
         </div>
         <script src="src/user.js"></script>
         <script src="src/message.js"></script>
