fixed styling, added default pfp

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,9 @@
                     
                 </div>
             </div>
-            <div id="chatbox" class="chatbox">\
-                <div id="inputbox" class="inputbox">
-                    <form id="chatform"><input type="text" id="chatbar" name="chatbar" placeholder="Click to begin typing"></form>
-                </div>
+            <div id="chatbox" class="chatbox"></div>
+            <div id="inputbox" class="inputbox">
+                <form id="chatform"><input type="text" id="chatbar" class="chatbar" placeholder="Click to begin typing"/></form>
             </div>
             <img src="img/cog.png" id="cog"/>
         </div>
