added red x, finished outline of options modal

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,12 @@
                 <h1>What's your name?</h1>
             </div>
         </div>
-        <div id="cogModal" class="optionsModal"></div>
+        <div id="cogModal" class="optionsModal">
+            <div class="wrapper">
+                <img src="img/redx.png" id="xbutton">
+                Options
+            </div>
+        </div>
         <div id="chatwindow" class="chatwindow">
             <div id="userlist" class="userlist">
                 <span>Users:</span>
