--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <script src="https://cdn.socket.io/4.1.2/socket.io.min.js" integrity="sha384-toS6mmwu70G0fw54EGlWWeA4z3dyJ+dlXBtSURSKN4vyRFOcxd3Bzjj/AoOwY+Rg" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div id="modal" class="usernameModal">
-            <div id="modalContent" class="usernameModal-inner">
-                <form id="modalform"><input type="text" id="userInput" class="userInput"></form>
-                <h1>What's your name?</h1>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"
+        integrity="sha384-toS6mmwu70G0fw54EGlWWeA4z3dyJ+dlXBtSURSKN4vyRFOcxd3Bzjj/AoOwY+Rg"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div id="modal" class="usernameModal">
+        <div id="modalContent" class="usernameModal-inner">
+            <form id="modalform"><input type="text" id="userInput" class="userInput"></form>
+            <h1>What's your name?</h1>
+        </div>
+    </div>
+    <div id="cogModal" class="optionsModal">
+        <div class="wrapper">
+            <img src="img/redx.png" id="xbutton">
+            Options
+        </div>
+        <div class="optionChoices">
+            <div class="form-wrapper">
+                <label for="fileupload" id="filelabel" class="filelabel">
+                    <img src="img/default.jpg">
+                    <div class="file-img-text"></div>
+                </label>
+                <form id="imgform">
+                    <input type="file" id="fileupload" accept="image/*" />
+                </form>
             </div>
         </div>
-        <div id="cogModal" class="optionsModal">
-            <div class="wrapper">
-                <img src="img/redx.png" id="xbutton">
-                Options
+    </div>
+    <div id="chatwindow" class="chatwindow">
+        <div id="userlist" class="userlist">
+            <span>Users:</span>
+            <div id="numUsers">
+
             </div>
         </div>
-        <div id="chatwindow" class="chatwindow">
-            <div id="userlist" class="userlist">
-                <span>Users:</span>
-                <div id="numUsers">
-                    
-                </div>
-            </div>
-            <div id="chatbox" class="chatbox"></div>
-            <div id="inputbox" class="inputbox">
-                <form id="chatform"><input type="text" id="chatbar" class="chatbar" placeholder="Click to begin typing"/></form>
-            </div>
-            <img src="img/cog.png" id="cog"/>
+        <div id="chatbox" class="chatbox"></div>
+        <div id="inputbox" class="inputbox">
+            <form id="chatform"><input type="text" id="chatbar" class="chatbar" placeholder="Click to begin typing" />
+            </form>
         </div>
-        <script src="src/user.js"></script>
-        <script src="src/message.js"></script>
-    </body>
+        <img src="img/cog.png" id="cog" />
+    </div>
+    <script src="src/user.js"></script>
+    <script src="src/message.js"></script>
+</body>
+
 </html>
