profile pictures able to be changed

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,11 @@
         <div class="optionChoices">
             <div class="form-wrapper">
                 <label for="fileupload" id="filelabel" class="filelabel">
-                    <img src="img/default.jpg">
+                    <img src="img/default.jpg" id="pfppreview">
                     <div class="file-img-text"></div>
                 </label>
                 <form id="imgform">
-                    <input type="file" id="fileupload" accept="image/*" />
+                    <input type="file" id="fileupload" accept="image/png" />
                 </form>
             </div>
         </div>
