--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
         integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
         crossorigin="anonymous"></script>
+    <script>"https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"</script>
 </head>
 
 <body>
@@ -39,11 +40,20 @@
                     <input type="file" id="fileupload" accept="image/png" />
                 </form>
             </div>
+            <span id="change-text-size">Change text size</span>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="3" value="2" class="slider" id="slider">
+            </div>
+            <div class="text-sizes">
+                <span id="px12">12 px</span>
+                <span id="px16">16 px</span>
+                <span id="px24">24 px</span>
+            </div>
         </div>
     </div>
     <div id="chatwindow" class="chatwindow">
         <div id="userlist" class="userlist">
-            <span>Users:</span>
+            <span><b>Users:</b></span>
             <div id="numUsers">
 
             </div>
