--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
 </head>
 
 <body>
+    <div id="server_browser" class="server_browser">
+        <h1>Server Browser</h1>
+        <div class="server_menu_box">
+            <div class="server_list"></div>
+            <div class="create_server"></div>
+            <div class="join_global"></div>
+        </div>
+    </div>
     <div id="modal" class="usernameModal">
         <div id="modalContent" class="usernameModal-inner">
             <form id="modalform"><input type="text" id="userInput" class="userInput"></form>
