--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
     <div id="server_browser">
         <h1>Server Browser</h1>
         <div class="server_menu_box">
+            <div class="server_holder"></div>
+            <div class="server_creator">
+                <h2>Create a server</h2>
+                <form id="serverform">
+                    <input type="text" id="server_input" class="server_input" placeholder="Enter a server name">
+                </form>
+                <button type="button" id="server_button">Start server</button>
+            </div>
         </div>
     </div>
     <div id="chat_content">
