added default message on server creation
Collections only appear in mongo if there is at least one item, so I added a default message to populate new collections

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,12 @@
 <body>
     <div id="server_browser">
         <h1>Server Browser</h1>
+        <p>Servers will expire if no users remain, so be sure to stay active to keep them going!</p>
         <div class="server_menu_box">
             <div class="server_holder"></div>
             <div class="server_creator">
                 <h2>Create a server</h2>
-                <input type="text" id="server_input" class="server_input" placeholder="Enter a server name">
+                <input type="text" id="server_input" class="server_input" placeholder="Enter server name">
                 <button type="button" id="server_button">Start server</button>
             </div>
         </div>
